--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,8 +30,23 @@ jobs:
           path: target/BackupFlow-*-all.jar
       - name: Create Release (tag build)
         if: startsWith(github.ref, 'refs/tags/v')
-        uses: softprops/action-gh-release@v2
-        with:
-          files: target/BackupFlow-*-all.jar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          TAG="${GITHUB_REF#refs/tags/}"
+          BODY_FILE="/tmp/release_body.md"
+          if [ -f CHANGELOG.md ]; then
+            awk -v tag="${TAG#v}" 'BEGIN{capture=0} \
+              /^## \[/ { \
+                if(capture){exit} \
+                if($0 ~ "^## \\"[" tag "\\""){capture=1; print $0; next} \
+              } \
+              { if(capture) print }' CHANGELOG.md > "$BODY_FILE"
+          fi
+          if [ ! -s "$BODY_FILE" ]; then
+            echo "BackupFlow $TAG" > "$BODY_FILE"
+            echo "\n(CHANGELOG section not found or empty)" >> "$BODY_FILE"
+          fi
+          gh release create "$TAG" target/BackupFlow-*-all.jar \
+            --title "BackupFlow $TAG" \
+            --notes-file "$BODY_FILE" --verify-tag
