--- a/pom.xml
+++ b/pom.xml
@@ -93,9 +93,21 @@
             </plugin>
         </plugins>
         <resources>
+            <!-- General resources unfiltered -->
             <resource>
                 <directory>src/main/resources</directory>
                 <filtering>false</filtering>
+                <excludes>
+                    <exclude>plugin.yml</exclude>
+                </excludes>
+            </resource>
+            <!-- Filter only plugin.yml so ${project.version} expands -->
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+                <includes>
+                    <include>plugin.yml</include>
+                </includes>
             </resource>
         </resources>
     </build>
