feat: gradient prefix, diagnostics, root marker, improved backup state

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -40,3 +40,6 @@ permissions:
   backupflow.reload:
     description: Reload BackupFlow configuration
     default: op
+  backupflow.diag:
+    description: Diagnostic information command
+    default: op
