🚀 Release v0.1.2: Major performance & reliability improvements
✨ Added:
- Phase instrumentation & watchdog system
- Cancel command for emergency backup termination
- Enhanced diagnostics with ETA & throughput
- Hash-based incremental backup logic
- Upload optimization with buffered streams
- Directory scan timeouts & exclusion logic

🔧 Fixed:
- Backup state getting stuck in 'running' status
- Recursive backup prevention
- Thread safety improvements

📈 Performance:
- Pre-scan for accurate progress estimation
- 30s timeout per directory scan
- SHA-256 change detection to skip unchanged backups
- Optimized S3 uploads with larger part sizes

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -21,6 +21,9 @@ backup:
   retention:
     enableLifecycle: false   # if true rely on bucket lifecycle rules
     maxLocalEntries: 10      # how many local manifest records to keep
+  hardTimeoutSeconds: 600    # watchdog hard timeout for a single full backup (0=disable)
+  phaseStaleSeconds: 300     # warn if a phase (e.g., COLLECT) exceeds this without progress (0=disable)
+  skipUnchanged: true        # skip backup if no files changed since last backup (based on content hash)
   schedule:
     enabled: true
     intervalMinutes: 60     # run every X minutes
